--- a/index.html
+++ b/index.html
@@ -713,7 +713,7 @@
                                 <div class="flex space-x-4">
                                     <a href="#" class="bg-blue-900 text-white p-3 rounded-full hover:bg-blue-800 transition"><i class="fab fa-facebook-f"></i></a>
                                     <a href="#" class="bg-blue-900 text-white p-3 rounded-full hover:bg-blue-800 transition"><i class="fab fa-twitter"></i></a>
-                                    <a href="https://instagram.com/uniquevalor" class="bg-blue-900 text-white p-3 rounded-full hover:bg-blue-800 transition"><i class="fab fa-instagram"></i></a>
+                                    <a href="https://instagram.com/valortrust.consultant" class="bg-blue-900 text-white p-3 rounded-full hover:bg-blue-800 transition"><i class="fab fa-instagram"></i></a>
                                     <a href="https://tiktok.com/@uniquevalor0" class="bg-blue-900 text-white p-3 rounded-full hover:bg-blue-800 transition"><i class="fab fa-tiktok"></i></a>
                                     <a href="https://wa.me/2348039535043" class="bg-green-500 text-white p-3 rounded-full hover:bg-green-600 transition"><i class="fab fa-whatsapp"></i></a>
                                     <a href="#" class="bg-blue-900 text-white p-3 rounded-full hover:bg-blue-800 transition"><i class="fab fa-linkedin-in"></i></a>
